--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "RNAppTemplate",
+  "name": "rn-app-template",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,8 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.15",
+    "@react-navigation/native-stack": "^6.9.24",
+    "axios": "^1.6.7",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-error-boundary": "^1.2.4",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -24,6 +31,7 @@
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
