--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-error-boundary": "^1.2.4",
+    "react-native-mmkv": "^2.12.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "swr": "^2.2.5"
