--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-mmkv": "^2.12.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
