--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "rn-app-template",
+  "name": "rn-app-security-checks",
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "pod": "cd ios && bundle exec pod install && cd ..",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
@@ -42,5 +43,6 @@
   },
   "engines": {
     "node": ">=18"
-  }
+  },
+  "packageManager": "yarn@1.22.22"
 }
