--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@react-navigation/native": "^6.1.15",
     "@react-navigation/native-stack": "^6.9.24",
     "axios": "^1.6.7",
-    "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react": "19.0.0",
+    "react-native": "0.79.4",
     "react-native-error-boundary": "^1.2.4",
     "react-native-mmkv": "^2.12.1",
     "react-native-safe-area-context": "^4.9.0",
@@ -24,15 +24,19 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.73.21",
-    "@react-native/eslint-config": "0.73.2",
-    "@react-native/metro-config": "0.73.5",
-    "@react-native/typescript-config": "0.73.1",
-    "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
+     "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/runtime": "^7.25.0",
+    "@react-native-community/cli": "18.0.0",
+    "@react-native-community/cli-platform-android": "18.0.0",
+    "@react-native-community/cli-platform-ios": "18.0.0",
+    "@react-native/babel-preset": "0.79.4",
+    "@react-native/eslint-config": "0.79.4",
+    "@react-native/metro-config": "0.79.4",
+    "@react-native/typescript-config": "0.79.4",
+    "@types/jest": "^29.5.13",
+    "@types/react": "^19.0.0",
+    "@types/react-test-renderer": "^19.0.0",
     "babel-jest": "^29.6.3",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
