--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "axios": "^1.10.0",
     "react": "19.0.0",
     "react-native": "0.79.4",
+    "react-native-edge-to-edge": "^1.6.1",
     "react-native-error-boundary": "^2.0.0",
     "react-native-mmkv": "^3.3.0",
+    "react-native-nitro-modules": "^0.26.2",
     "react-native-safe-area-context": "^5.5.0",
     "react-native-screens": "^4.11.1",
+    "react-native-unistyles": "next",
     "swr": "^2.3.3",
     "zustand": "^5.0.5"
   },
